--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Java template
 # Compiled class file
 *.class
 
@@ -23,7 +21,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# IntelliJ Files #
+# IntelliJ project files
+.idea
 *.iml
-*.xml
-*.idea
+out
+gen
