Lab02 Commit: Updated code and did assignment in Kotlin to practice the language for Android development.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,14 @@ hs_err_pid*
 
 # IntelliJ Files #
 *.iml
-*.xml
 *.idea
 /out/
+
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
